<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SecondActivity">

    <TableLayout
            android:background="#000000"
            android:id="@+id/glGameBoard"
            android:layout_width="228dp"
            android:layout_height="260dp"
            android:layout_centerHorizontal="true"
            android:rowCount="3"
            android:columnCount="3"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.497"
    >

        <TableRow android:layout_width="217dp" android:layout_height="33dp">

            <Button
                    android:id="@+id/case00"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
            />

            <Button
                    android:id="@+id/case01"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
            />

            <Button
                    android:id="@+id/case02"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
            />

        </TableRow>

        <TableRow>

            <Button
                    android:id="@+id/case10"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/case11"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
                    style="@style/Widget.AppCompat.Button"
            />

            <Button
                    android:id="@+id/case12"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
            />

        </TableRow>

        <TableRow android:layout_height="345dp" android:layout_width="wrap_content">

            <Button
                    android:id="@+id/case20"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
            />

            <Button
                    android:id="@+id/case21"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
            />

            <Button
                    android:id="@+id/case22"
                    android:layout_width="70dp"
                    android:layout_height="80dp"
                    android:textSize="22sp"
                    android:textColor="#FFFFFF"
                    android:background="#fff8dc"
                    android:gravity="center"
                    android:layout_margin="0.5dp"
            />

        </TableRow>

    </TableLayout>

    <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#424242"
            android:textSize="18sp"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:padding="8dp"
    />
    <TextView
            android:text="@string/player_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Player1"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintVertical_bias="0.077"/>
    <TextView
            android:text="@string/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/Player1" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintVertical_bias="0.088"/>
    <TextView
            android:text="@string/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/Player2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintVertical_bias="0.366"/>
    <TextView
            android:text="Player turn :"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Player2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/glGameBoard" app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintVertical_bias="0.366"/>

</android.support.constraint.ConstraintLayout>